--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-/available-technician-service/ @shivamtech29 @skr-1
-/technician-service/ @shivamtech29 @skr-1
-/user-service/ @skr-1 @shivamtech29
+/available-technician-service/ @shivamtech29 @skr-1 @git-99-manish
+/technician-service/ @shivamtech29 @skr-1 @git-99-manish
+/user-service/ @skr-1 @shivamtech29 @git-99-manish
