--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: '1.20'
+          go-version: '1.22.5'
         
       - name: Run Go tests
         run: |
@@ -30,7 +30,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: '1.20'
+          go-version: '1.22.5'
       - name: Run Go tests
         run: |
           cd available-technician-service
@@ -50,5 +50,5 @@ jobs:
         
       - name: Run Java checks
         run: |
-          cd java-service-directory
+          cd user-service
           mvn test
